==> PelionIoT/mbed-cloud-client/mbed-client-pal/Source/Port/Reference-Impl/OS_Specific/ZephyrOS/RTOS/pal_plat_rtos.c <==
#include <zephyr.h>
#include <zephyr/types.h>
#include <logging/log.h>
#include <power/reboot.h>
#include <posix/time.h>
#include "pal_plat_rtos.h"
#define CONFIG_PELION_PAL_PLAT_RTOS_LOG_LEVEL 2 /* Warning */

palStatus_t pal_plat_RTOSInitialize(void *opaqueContext)
{
    /* initialize pre-allocated thread structure */
    for (size_t index = 0; index < PAL_THREADS_MAX_COUNT; index++) {
        pal_threads[index].available = true;
    }

    return PAL_SUCCESS;
}

palStatus_t pal_plat_osThreadCreate(palThreadFuncPtr function, void *funcArgument, palThreadPriority_t priority, uint32_t stackSize, palThreadID_t *threadID)
{
    if (threadID == NULL) {
        return PAL_ERR_INVALID_ARGUMENT;
    }

    /* find unused memory block from pool */
    size_t index = 0;

    for ( ; index < PAL_THREADS_MAX_COUNT; index++) {
        if (pal_threads[index].available) {
            break;
        }
    }

    /* create new thread with memory from pool */
    if ((stackSize <= PAL_STACKS_MAX_SIZE) && (index < PAL_THREADS_MAX_COUNT)) {

        /* mark thread as in-use */
        pal_threads[index].available = false;

        /* Adjust priority - let pelion threads execute as preemptive threads. */
        BUILD_ASSERT(CONFIG_NUM_PREEMPT_PRIORITIES > PAL_osPrioritylast - PAL_osPriorityFirst,
                 "Not enough priorities of preemptive threads");
        int prio_adj = PAL_osPrioritylast - priority;

        k_tid_t tid = k_thread_create(&(pal_threads[index].thread),
                                      pal_stacks[index],
                                      K_THREAD_STACK_SIZEOF(pal_stacks[index]),
                                      (void*)thread_fn,
                                      function, funcArgument, NULL,
                                      prio_adj,
                                      0,
                                      K_NO_WAIT);

        LOG_INF("Thread %p created - prio:%d (%d) stack_size:%d", tid, priority, prio_adj, stackSize);
        *threadID = (palThreadID_t) tid;

        return PAL_SUCCESS;
    } else {
        LOG_ERR("Failed to create thread: no memory");
        *threadID = 0;
    }

    return PAL_ERR_NO_MEMORY;
}

palStatus_t pal_plat_osThreadTerminate(palThreadID_t *threadID)
{
    struct k_thread* thread = (struct k_thread*) *threadID;

    if (!thread) {
        return PAL_ERR_RTOS_PARAMETER;
    }

    LOG_WRN("Killing thread not available - waiting for thread to stop");
    while (true) {
        int err = k_thread_join(thread, K_FOREVER);
        if (!err) {
            /* return thread data structure to pool and clear it */
            pal_thread_t* container = CONTAINER_OF(thread, pal_thread_t, thread);
            memset(&(container->thread), 0, sizeof(struct k_thread));
            container->available = true;
            return PAL_SUCCESS;
        } else if ((err == -EBUSY) || (err == -EAGAIN)) {
            continue;
        } else {
            return PAL_ERR_RTOS_TASK;
        }
    }
}

palStatus_t pal_plat_osDelay(uint32_t milliseconds)
{
    while (true) {
        int err = k_sleep(K_MSEC(milliseconds));

        if (!err) {
            return PAL_SUCCESS;
        } else if (err < 0) {
            return PAL_ERR_GENERIC_FAILURE;
        } else {
            milliseconds = err;
            continue;
        }
    }
}

palStatus_t pal_plat_osTimerCreate(palTimerFuncPtr function,
                   void *funcArgument,
                   palTimerType_t timerType,
                   palTimerID_t *timerID)
{
    if ((timerID == NULL) || ((void*)function == NULL)) {
        return PAL_ERR_INVALID_ARGUMENT;
    }

    struct timer_data *timer_data = malloc(sizeof(*timer_data));

    if (timer_data) {
        timer_data->arg = funcArgument;
        timer_data->callback = function;

        /* Non-zero period marks periodic timer. */
        timer_data->period = (timerType == palOsTimerPeriodic) ? UINT64_MAX : 0;
        timer_data->timeout = 0;

        k_mutex_init(&timer_data->lock);
        k_work_init_delayable(&timer_data->dwork, work_fn);

        *timerID = (palTimerID_t)timer_data;
        return PAL_SUCCESS;
    }

    timerID = 0;
    return PAL_ERR_NO_MEMORY;
}

palStatus_t pal_plat_osTimerStart(palTimerID_t timerID, uint32_t millisec)
{
    struct timer_data *timer_data = (void*)timerID;
    if (!timer_data) {
        return PAL_ERR_RTOS_PARAMETER;
    } else if ((millisec == 0) || (millisec == PAL_RTOS_WAIT_FOREVER)) {
        return PAL_ERR_RTOS_VALUE;
    }

    uint64_t uptime = k_uptime_get();

    k_mutex_lock(&timer_data->lock, K_FOREVER);

    timer_data->timeout = (uptime + millisec);
    if (timer_data->period) {
        timer_data->period = millisec;
    }

    int ret = k_work_reschedule(&timer_data->dwork, K_TIMEOUT_ABS_MS(timer_data->timeout));
    __ASSERT_NO_MSG(ret > 0);
    k_mutex_unlock(&timer_data->lock);

    return PAL_SUCCESS;
}

palStatus_t pal_plat_osTimerStop(palTimerID_t timerID)
{
    struct timer_data *timer_data = (void*)timerID;
    if (!timer_data) {
        return PAL_ERR_RTOS_PARAMETER;
    }

    k_mutex_lock(&timer_data->lock, K_FOREVER);

    /* Mark timeout as stopped. */
    timer_data->timeout = UINT64_MAX;
    if (timer_data->period) {
        timer_data->period = UINT64_MAX;
    }

    /* Return code is not relevant.
     * If Stop was called from timer callback it cannot be stopped.
     * Let in-callback code handle the stop.
     */
    (void)k_work_cancel_delayable(&timer_data->dwork);
    k_mutex_unlock(&timer_data->lock);

    return PAL_SUCCESS;
}

palStatus_t pal_plat_osTimerDelete(palTimerID_t *timerID)
{
    if (timerID == NULL) {
        return PAL_ERR_INVALID_ARGUMENT;
    }

    struct timer_data *timer_data = (void*)*timerID;
    if (!timer_data) {
        return PAL_ERR_RTOS_PARAMETER;
    }

    /* Callbacks are executed form sys_workq thread.
     * Deletion from its own callback will lead to deadlock.
     */
    __ASSERT_NO_MSG(k_current_get() != &k_sys_work_q.thread);

    palStatus_t ret = pal_plat_osTimerStop(*timerID);
    __ASSERT_NO_MSG(ret == PAL_SUCCESS);

    (void)k_work_cancel_delayable_sync(&timer_data->dwork, &timer_data->work_sync);

    /* Nothing is using the resources - delete the timer. */
    free(timer_data);
    *timerID = (palTimerID_t)NULL;

    return PAL_SUCCESS;
}

palStatus_t pal_plat_osMutexCreate(palMutexID_t *mutexID)
{
    if (NULL == mutexID) {
        return PAL_ERR_INVALID_ARGUMENT;
    }

    struct k_mutex *mutex = malloc(sizeof(*mutex));
    if (mutex) {
        int err = k_mutex_init(mutex);
        if (err) {
            free(mutex);
            mutexID = 0;
            return PAL_ERR_CREATION_FAILED;
        }

        *mutexID = (palMutexID_t)mutex;
        return PAL_SUCCESS;
    }

    *mutexID = 0;
    return PAL_ERR_NO_MEMORY;
}

palStatus_t pal_plat_osMutexWait(palMutexID_t mutexID, uint32_t millisec)
{
    struct k_mutex *mutex = (void*)mutexID;
    if (!mutex) {
        return PAL_ERR_RTOS_PARAMETER;
    }

    int ret = k_mutex_lock(mutex, get_timeout(millisec));

    if (ret == -EAGAIN) {
        return PAL_ERR_RTOS_TIMEOUT;
    } else if (ret) {
        return PAL_ERR_GENERIC_FAILURE;

    }

    return PAL_SUCCESS;
}

palStatus_t pal_plat_osMutexRelease(palMutexID_t mutexID)
{
    struct k_mutex *mutex = (void*)mutexID;
    if (!mutex) {
        return PAL_ERR_RTOS_PARAMETER;
    }

    int ret = k_mutex_unlock(mutex);

    if (ret) {
        return PAL_ERR_GENERIC_FAILURE;
    }

    return PAL_SUCCESS;
}

palStatus_t pal_plat_osSemaphoreCreate(uint32_t count, palSemaphoreID_t *semaphoreID)
{
    if (NULL == semaphoreID) {
        return PAL_ERR_INVALID_ARGUMENT;
    }

    struct k_sem *sem = malloc(sizeof(*sem));
    if (sem) {
        int err = k_sem_init(sem, count, PAL_SEMAPHORE_MAX_COUNT);
        if (err) {
            LOG_ERR("Failed to initialize semaphore (err:%d)", err);
            free(sem);
            semaphoreID = 0;
            return PAL_ERR_CREATION_FAILED;
        }

        *semaphoreID = (palSemaphoreID_t)sem;
        return PAL_SUCCESS;
    } else {
        LOG_ERR("Failed to create semaphore: no memory");
    }

    *semaphoreID = 0;
    return PAL_ERR_NO_MEMORY;
}

palStatus_t pal_plat_osSemaphoreWait(palSemaphoreID_t semaphoreID, uint32_t millisec, int32_t *countersAvailable)
{
    struct k_sem *sem = (void*)semaphoreID;
    if (!sem) {
        return PAL_ERR_RTOS_PARAMETER;
    }

    int ret = k_sem_take(sem, get_timeout(millisec));

    if (ret == -EAGAIN) {
        return PAL_ERR_RTOS_TIMEOUT;
    } else if (ret) {
        return PAL_ERR_GENERIC_FAILURE;

    }

    return PAL_SUCCESS;
}

palStatus_t pal_plat_osSemaphoreRelease(palSemaphoreID_t semaphoreID)
{
    struct k_sem *sem = (void*)semaphoreID;
    if (!sem) {
        return PAL_ERR_RTOS_PARAMETER;
    }

    k_sem_give(sem);

    return PAL_SUCCESS;
}
